--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: queuetodo
-description: Manage your everyday tasks in the right way.
+description: Manage your everyday tasks the right way.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
