--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   shared_preferences: ^0.5.6+1
+  url_launcher: ^5.4.1
 
 dev_dependencies:
   flutter_test:
