--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: queuetodo
-description: Manage your everyday tasks the right way.
+description: Manage your everyday tasks in the right order.
 
 version: 1.1.0+4
 
@@ -9,7 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
+  flutter_localizations:
+    sdk: flutter
+  easy_localization: ^1.4.1
+  intl: ^0.16.0
   shared_preferences: ^0.5.6+1
   url_launcher: ^5.4.1
 
@@ -20,3 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lang/en-US.json
+    - assets/lang/pl-PL.json
