--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: queuetodo
 description: Manage your everyday tasks in the right order.
+homepage: https://gitlab.com/mattmaniak/queuetodo
 
 version: 1.2.0+5
 
